# mcp-port-scanner

./: .cursorrules  .dockerignore  .dxtignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CURSOR_SETUP.md  CURSOR_SSE_SETUP.md  CURSOR_USAGE_GUIDE.md  Dockerfile  INSTALL.md  LICENSE  README.md  cursor-mcp-config.json  cursor-mcp-prompt.md  docker-compose.yml  docker-run.bat  manifest.json  mcp-docker.json  mcp.json  prompt.md  pyproject.toml  requirements.txt  scan.py  setup.py
config/: default.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  DXT_BUILD_README.md  MCP_IMPLEMENTATION_REPORT.md  QUICKSTART.md
examples/: simple_test.py
scan_results/: scan_google_com.json  scan_httpbingo_org.json  scan_scanme_nmap_org.json
scripts/: build-dxt.bat  build-dxt.py  build-dxt.sh  download_rustscan.py  setup.sh
src/mcp_port_scanner/: __init__.py  __main__.py  cli.py  cursor_sse_adapter.py  http_detector.py  http_sse_server.py  logger_config.py  mcp_server.py  models.py  rustscan_manager.py  scanner.py  service.py  web_prober.py
src/mcp_port_scanner/adapters/: __init__.py  cli_adapter.py  mcp_local_adapter.py  mcp_remote_adapter.py
src/mcp_port_scanner/interfaces/: __init__.py  cli_interface.py  mcp_local_server.py  python_sdk.py
